# weather-rs

./: Cargo.toml  LICENSE  README.md
src/: icons.rs  main.rs  weather.rs
