[package]
name = "weather-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
once_cell = "1.8.0"
tui = "0.16.0"
termion = "1.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0"
